--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <meta name="description" content="Week 1 Challenge 3">
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
   <link rel="stylesheet" href="styles/style.css">
 </head>
 
@@ -43,7 +43,12 @@
     <div></div>
     <div>1.95€</div>
   </section>
-  <footer><img src="" alt=""></footer>
+  <footer>
+    <a href="http://jigsaw.w3.org/css-validator/check/referer">
+      <img style="border:0;width:88px;height:31px" src="http://jigsaw.w3.org/css-validator/images/vcss"
+        alt="Valid CSS!" />
+    </a>
+  </footer>
 
 </body>
 
